syntax = "proto3";

package coredns.dns;
option go_package = "pb";

message DnsPacket {
    bytes msg = 1;
}

service DnsService {
    rpc Query (DnsPacket) returns (DnsPacket);
    rpc AXFRQuery (DnsPacket) returns (stream DnsPacket);
    rpc UpdateQuery (DnsPacket) returns (DnsPacket);
}

message ClearCache {
    string label = 1;
    uint32 dns_class = 2;
    uint32 record_type = 3;
}